--- a/Html_test.html
+++ b/Html_test.html
@@ -4,6 +4,8 @@
 	<title>My first website</title>
 </head>
 <body>
-    Hello there! :)
+    <h1>Hello there! Boo!</h1>
+    <h2>Hello there! Boo!</h2>
+    <h6>Hello there! Boo!</h6> 
 </body>
 </html>
