text with link direction

--- a/Html_test.html
+++ b/Html_test.html
@@ -23,7 +23,8 @@
         <li>apple</li>
     </ol>
 
-    <a href="">New page</a>
+    <a href="me.html">New page</a><br>
+    <a href="https://www.google.com/search?q=fuji+apple&oq=f&aqs=chrome.1.69i60j69i59l2j0i324j69i60l3j69i61.1288j0j7&sourceid=chrome&ie=UTF-8">Web link</a>
 
     <ul>
         <li>banana</li>
