--- a/register.html
+++ b/register.html
@@ -7,20 +7,32 @@
     <title>Register</title>
 </head>
 <body>
-    <form>
-        First Name: <input type="text"><br>
-        Last Name: <input type="text"><br>
-        Email: <input type="email" required><br>
+    <h1>Register page</h1>
+
+    <span></span> <!--used for lines to have specific functionality-->
+    <div> <!--dvides into sections-->
+    <!--Use GET, not POST-->
+    <form method="GET">
+        First Name: <input type="text" name="firstname"><br>
+        Last Name: <input type="text" name="lastname"><br>
+        Email: <input type="email" name="email" required><br>
+        Password: <input type="password" name="password" min="5"><br>
         Birthday: <input type="date"><br>
         Gender:<br>
-        <input type="radio" name="gender">Male>
-        <input type="radio" name="gender">Female>
-        <input type="radio" name="gender">Other>
+        <input type="radio" name="gender" value="Male">Male<br>
+        <input type="radio" name="gender" value="Female">Female<br>
+        <input type="radio" name="gender" value="Other">Other<br>
         Pets: <br>
-        <input type="checkbox"> Cat<br>
-        <input type="checkbox"> Dogs<br>
-        <input type="submit" value="Register!"><br>
+        <input type="checkbox" name="cat"> Cat<br>
+        <input type="checkbox" name="dog"> Dog<br>
+        Cars: <br>
+        <select name="Cars">
+            <option value="volvo" name="volvo">Volvo</option>
+            <option value="Audi" name="audi">Audi</option>
+        </select><br>
+        <input type="submit" value="Register!">
         <input type="reset">
     </form>
+</div>
 </body>
 </html>
