--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
     <h1>Register page</h1>
 
     <span></span> <!--used for lines to have specific functionality-->
-    <div> <!--dvides into sections-->
+    <div></div> <!--dvides into sections-->
     <!--Use GET, not POST-->
     <form method="GET">
         First Name: <input type="text" name="firstname"><br>
@@ -33,6 +33,5 @@
         <input type="submit" value="Register!">
         <input type="reset">
     </form>
-</div>
 </body>
 </html>
