--- a/Bootstrap/Startup_project/index.html
+++ b/Bootstrap/Startup_project/index.html
@@ -17,7 +17,19 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <div class="container d-flex align-items-center h-100">
+      <div class="row">
+        <header class="text-center col-12">
     <h1 class="text-uppercase"><strong>The biggest startup event of the year</strong></h1>
-    <button class="btn btn-primary btn-xl">Find out more</button>
+  </header>
+  <div class="buffer col-12"></div>
+  <section class="text-center col-12">
+    <hr>
+    <a href="https://mailchi.mp/02c47f9b6a56/ztm">
+      <button class="btn btn-primary btn-xl">Find out more</button>
+    </a>
+  </section>
+</div>
+</div>
   </body>
 </html>
